task02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myapptest.test
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: service-backend
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service-frontend
            port:
              number: 80
